--- a/about.html
+++ b/about.html
@@ -288,6 +288,9 @@ $(document).ready(function () {
 <li>
   <a href="about.html">About</a>
 </li>
+<li>
+  <a href="another.html">Another Page</a>
+</li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         
